...
                            NavigationLink {
                                RegisterView()
                            } label: {
                                Text("Register Here")
                            }
                            .foregroundColor(Color("Primary"))
                            .accessibilityIdentifier("LoginViewRegisterButton")
                        Spacer()
                        }.padding(.top, 10)
                            .font(.subheadline.bold())
                    }
                    }
                    Button{
...
